# tools

./: .gitignore  LICENSE  README.md
.cursor/rules/: system-prompt.mdc
jenkins/: Jenkinsfile
linux/: free_disk.sh  kernels-cleanup.sh
mysql/: binlog_backup.sh
mysql-myloader-migration/: Dockerfile  migrate.sh
mysql/backup/: README.md
mysql/replication/: Dockerfile  binlog_backup.sh
openai/: README.md  chat.py  pyproject.toml  translate.py
