[tool.poetry]
name = "speech-to-text"
version = "0.1.0"
description = ""
authors = ["Andrey_Semetchkov <andreysemechkov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "speech_to_text"}]

[tool.poetry.dependencies]
python = "^3.11.0"
openai = {git = "https://github.com/openai/openai-python.git"}
beautifulsoup4 = "^4.12.0"
pydub = "^0.25.1"
click = "^8.1.7" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
